@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Proxies patch from chotchki (bug #90147)
+
   6 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Patch from zahna to have default option increment in main menu.
 
