@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.150 2005/04/29 02:20:05 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.151 2005/04/29 05:22:36 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Proxies patch from chotchki (bug #90147).
 
   28 Apr 2005; Preston Cody <codeman@gentoo.org>
   Added group-adding code to set_users in ArchTemplate
